--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ regex = "1.9.4"
 tracing = { version = "*", features = ["log"] }
 simplelog = "*"
 fastrand = "2.3.0"
+eframe = { version = "0.31.1", optional = true }
+
+[features]
+default = []
+pdf_inspector = ["dep:eframe"]
