--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ tracing = { version = "*", features = ["log"] }
 simplelog = "*"
 fastrand = "2.3.0"
 eframe = { version = "0.31.1", optional = true }
+ab_glyph = "0.2.29"
+epaint_default_fonts = "0.31.1"
 
 [features]
 default = []
