--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ tracing = { version = "*", features = ["log"] }
 simplelog = "*"
 fastrand = "2.3.0"
 eframe = { version = "0.31.1", optional = true }
-ab_glyph = "0.2.29"
-epaint_default_fonts = "0.31.1"
+ab_glyph = { version = "0.2.29", optional = true }
+epaint_default_fonts = { version = "0.31.1", optional = true }
 
 [features]
 default = []
-pdf_inspector = ["dep:eframe"]
+pdf_inspector = ["dep:eframe", "dep:epaint_default_fonts", "dep:ab_glyph"]
