--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ fastrand = "2.3.0"
 eframe = { version = "0.31.1", optional = true }
 ab_glyph = { version = "0.2.29", optional = true }
 epaint_default_fonts = { version = "0.31.1", optional = true }
+either = "1.15.0"
 
 [features]
 default = []
