--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,13 @@ name = "architecture_doc_extractor"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "architecture_doc_extractor_cli"
+path = "src/main.rs"
+
+[lib]
+name = "architecture_doc_extractor"
+path = "src/lib.rs"
 
 [dependencies]
 lopdf = "0.33.0"
