--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ eframe = { version = "0.31.1", optional = true }
 ab_glyph = { version = "0.2.29", optional = true }
 epaint_default_fonts = { version = "0.31.1", optional = true }
 geo = "0.30.0"
+either = "1.15.0"
 
 [features]
 default = []
